--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -19,18 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "06dd1e2f-f26d-4e07-bdaf-cd31c72ae2a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import des données"
+    "#Import des données\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "dt = pd.read_csv(\"data/revenus.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1810fea-4324-4bf1-b84f-289cad5bf5f8",
+   "id": "af565694",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -38,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -52,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
