Notebook avec la fonction pour supprimer les ?

--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "06dd1e2f-f26d-4e07-bdaf-cd31c72ae2a5",
    "metadata": {},
    "outputs": [],
@@ -28,13 +28,55 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "dt = pd.read_csv(\"data/revenus.csv\")"
+    "df = pd.read_csv(\"data/revenus.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ccc335",
+   "metadata": {},
+   "source": [
+    "Fonction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "af565694",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction pour supprimer les \"?\"\n",
+    "\n",
+    "def drop_data(df):\n",
+    "    \"\"\"\n",
+    "    Supprime les lignes contenant un '?' dans un DataFrame.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): Le DataFrame à traiter.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: Le DataFrame nettoyé sans les lignes contenant '?'.\n",
+    "    \"\"\"\n",
+    "    # Supprimer les lignes où au moins un élément est '?'\n",
+    "    df_cleaned = df[~df.isin(['?']).any(axis=1)]\n",
+    "    return df_cleaned\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9a1347f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = drop_data(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af565694",
+   "id": "03102362",
    "metadata": {},
    "outputs": [],
    "source": []
