Notebook avec la fonction recodage

--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8d2b4777-34d0-42b5-b8f6-ee8354cdf386",
    "metadata": {},
    "source": [
     "# Projet MLops"
@@ -10,7 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3ff3d5-ab10-405b-8287-7189d2a6bee9",
+   "id": "c51820a9",
    "metadata": {},
    "source": [
     "#### Groupe : Lucas - Klervi - Elena - Thomas R\n",
@@ -19,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "06dd1e2f-f26d-4e07-bdaf-cd31c72ae2a5",
+   "execution_count": 1,
+   "id": "6e919315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ccc335",
+   "id": "4fe31abb",
    "metadata": {},
    "source": [
     "Fonction"
@@ -41,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "af565694",
+   "execution_count": 2,
+   "id": "faf3355b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9a1347f6",
+   "execution_count": 3,
+   "id": "05452b4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +74,458 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03102362",
+   "execution_count": 4,
+   "id": "ee68c12a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fonction de recodage des variables\n",
+    "\n",
+    "def numeriser_toutes_colonnes(df):\n",
+    "    \"\"\"\n",
+    "    Cette fonction numérise plusieurs colonnes spécifiées dans le DataFrame \n",
+    "    avec des mappings prédéfinis directement dans la fonction.\n",
+    "\n",
+    "    :param df: DataFrame contenant les données à numériser\n",
+    "    :return: DataFrame avec les colonnes numérisées\n",
+    "    \"\"\"\n",
+    "    #Suppression de la variable education : c'est la même que educational num\n",
+    "\n",
+    "    if 'education' in df.columns:\n",
+    "        df = df.drop(columns=['education'])\n",
+    "        \n",
+    "    # Mapping pour 'workclass'\n",
+    "    workclass_mapping = {\n",
+    "        'Private': 1,\n",
+    "        'Self-emp-not-inc': 2,\n",
+    "        'Local-gov': 3,\n",
+    "        'State-gov': 4,\n",
+    "        'Self-emp-inc': 5,\n",
+    "        'Federal-gov': 6,\n",
+    "        'Without-pay': 7,\n",
+    "        'Never-worked': 8\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'marital-status'\n",
+    "    marital_status_mapping = {\n",
+    "        'Never-married': 1,\n",
+    "        'Married-civ-spouse': 2,\n",
+    "        'Widowed': 3,\n",
+    "        'Divorced': 4,\n",
+    "        'Separated': 5,\n",
+    "        'Married-spouse-absent': 6,\n",
+    "        'Married-AF-spouse': 7\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'occupation'\n",
+    "    occupation_mapping = {\n",
+    "        'Machine-op-inspct': 1,\n",
+    "        'Farming-fishing': 2,\n",
+    "        'Protective-serv': 3,\n",
+    "        'Other-service': 4,\n",
+    "        'Prof-specialty': 5,\n",
+    "        'Craft-repair': 6,\n",
+    "        'Adm-clerical': 7,\n",
+    "        'Exec-managerial': 8,\n",
+    "        'Tech-support': 9,\n",
+    "        'Sales': 10,\n",
+    "        'Priv-house-serv': 11,\n",
+    "        'Transport-moving': 12,\n",
+    "        'Handlers-cleaners': 13,\n",
+    "        'Armed-Forces': 14\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'relationship'\n",
+    "    relationship_mapping = {\n",
+    "        'Own-child': 1,\n",
+    "        'Husband': 2,\n",
+    "        'Not-in-family': 3,\n",
+    "        'Unmarried': 4,\n",
+    "        'Wife': 5,\n",
+    "        'Other-relative': 6\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'race'\n",
+    "    race_mapping = {\n",
+    "        'Black': 1,\n",
+    "        'White': 2,\n",
+    "        'Asian-Pac-Islander': 3,\n",
+    "        'Other': 4,\n",
+    "        'Amer-Indian-Eskimo': 5\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'gender'\n",
+    "    gender_mapping = {\n",
+    "        'Male': 1,\n",
+    "        'Female': 2\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'native-country'\n",
+    "    native_country_mapping = {\n",
+    "        'United-States': 1,\n",
+    "        'Peru': 2,\n",
+    "        'Guatemala': 3,\n",
+    "        'Mexico': 4,\n",
+    "        'Dominican-Republic': 5,\n",
+    "        'Ireland': 6,\n",
+    "        'Germany': 7,\n",
+    "        'Philippines': 8,\n",
+    "        'Thailand': 9,\n",
+    "        'Haiti': 10,\n",
+    "        'El-Salvador': 11,\n",
+    "        'Puerto-Rico': 12,\n",
+    "        'Vietnam': 13,\n",
+    "        'South': 14,\n",
+    "        'Columbia': 15,\n",
+    "        'Japan': 16,\n",
+    "        'India': 17,\n",
+    "        'Cambodia': 18,\n",
+    "        'Poland': 19,\n",
+    "        'Laos': 20,\n",
+    "        'England': 21,\n",
+    "        'Cuba': 22,\n",
+    "        'Taiwan': 23,\n",
+    "        'Italy': 24,\n",
+    "        'Canada': 25,\n",
+    "        'Portugal': 26,\n",
+    "        'China': 27,\n",
+    "        'Nicaragua': 28,\n",
+    "        'Honduras': 29,\n",
+    "        'Iran': 30,\n",
+    "        'Scotland': 31,\n",
+    "        'Jamaica': 32,\n",
+    "        'Ecuador': 33,\n",
+    "        'Yugoslavia': 34,\n",
+    "        'Hungary': 35,\n",
+    "        'Hong': 36,\n",
+    "        'Greece': 37,\n",
+    "        'Trinadad&Tobago': 38,\n",
+    "        'Outlying-US(Guam-USVI-etc)': 39,\n",
+    "        'France': 40,\n",
+    "        'Holand-Netherlands': 41\n",
+    "    }\n",
+    "    \n",
+    "    # Mapping pour 'income'\n",
+    "    income_mapping = {\n",
+    "        '<=50K': 0,\n",
+    "        '>50K': 1\n",
+    "    }\n",
+    "    \n",
+    "    # List des colonnes à numériser avec leurs mappings\n",
+    "    mappings = {\n",
+    "        'workclass': workclass_mapping,\n",
+    "        'marital-status': marital_status_mapping,\n",
+    "        'occupation': occupation_mapping,\n",
+    "        'relationship': relationship_mapping,\n",
+    "        'race': race_mapping,\n",
+    "        'gender': gender_mapping,\n",
+    "        'native-country': native_country_mapping,\n",
+    "        'income': income_mapping\n",
+    "    }\n",
+    "\n",
+    "    # Suppression des espaces dans les colonnes concernées\n",
+    "    cols_to_strip = ['workclass', 'occupation', 'native-country']\n",
+    "    for col in cols_to_strip:\n",
+    "        df[col] = df[col].str.strip()\n",
+    "\n",
+    "    # Appliquer les mappings de numérisation à chaque colonne\n",
+    "    for col, mapping in mappings.items():\n",
+    "        df[col] = df[col].replace(mapping)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2be81aa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>educational-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>226802</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89814</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "      <td>336951</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160323</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7688</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>198693</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48837</th>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>257302</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48838</th>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>154374</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48839</th>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>151910</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48840</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>201490</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48841</th>\n",
+       "      <td>52</td>\n",
+       "      <td>5</td>\n",
+       "      <td>287927</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45222 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age  workclass  fnlwgt  educational-num  marital-status  occupation  \\\n",
+       "0       25          1  226802                7               1           1   \n",
+       "1       38          1   89814                9               2           2   \n",
+       "2       28          3  336951               12               2           3   \n",
+       "3       44          1  160323               10               2           1   \n",
+       "5       34          1  198693                6               1           4   \n",
+       "...    ...        ...     ...              ...             ...         ...   \n",
+       "48837   27          1  257302               12               2           9   \n",
+       "48838   40          1  154374                9               2           1   \n",
+       "48839   58          1  151910                9               3           7   \n",
+       "48840   22          1  201490                9               1           7   \n",
+       "48841   52          5  287927                9               2           8   \n",
+       "\n",
+       "       relationship  race  gender  capital-gain  capital-loss  hours-per-week  \\\n",
+       "0                 1     1       1             0             0              40   \n",
+       "1                 2     2       1             0             0              50   \n",
+       "2                 2     2       1             0             0              40   \n",
+       "3                 2     1       1          7688             0              40   \n",
+       "5                 3     2       1             0             0              30   \n",
+       "...             ...   ...     ...           ...           ...             ...   \n",
+       "48837             5     2       2             0             0              38   \n",
+       "48838             2     2       1             0             0              40   \n",
+       "48839             4     2       2             0             0              40   \n",
+       "48840             1     2       1             0             0              20   \n",
+       "48841             5     2       2         15024             0              40   \n",
+       "\n",
+       "       native-country  income  \n",
+       "0                   1       0  \n",
+       "1                   1       0  \n",
+       "2                   1       1  \n",
+       "3                   1       1  \n",
+       "5                   1       0  \n",
+       "...               ...     ...  \n",
+       "48837               1       0  \n",
+       "48838               1       1  \n",
+       "48839               1       0  \n",
+       "48840               1       0  \n",
+       "48841               1       1  \n",
+       "\n",
+       "[45222 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exemple d'application avec un DataFrame \"rev1\"\n",
+    "df = numeriser_toutes_colonnes(df)\n",
+    "\n",
+    "# Affichage du DataFrame après transformation\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
