--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -200,13 +200,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "750884be",
+   "cell_type": "markdown",
+   "id": "304499d9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "################################################"
+    "<hr style=\"border:2px solid white\"> </hr>"
    ]
   },
   {
@@ -226,7 +224,7 @@
    "source": [
     "def load_and_describe_data(file_path):\n",
     "    \"\"\"\n",
-    "    Charge un fichier CSV et fournit un aperçu général des données.\n",
+    "    Charge un fichier CSV.\n",
     "    :param file_path: Chemin du fichier CSV\n",
     "    :return: DataFrame Pandas\n",
     "    \"\"\"\n",
@@ -909,7 +907,7 @@
    "id": "3c728e5c",
    "metadata": {},
    "source": [
-    "On remarque la presence de ? dans le jeu de donnée, on decide de les supprimer. Et de regrouper les modalités rares"
+    "On remarque la presence de ? dans le jeu de donnée, on decide de les supprimer, et de regrouper les modalités rares."
    ]
   },
   {
